--- a/style.css
+++ b/style.css
@@ -6,20 +6,20 @@ body {
   font-family: var(--bs-font-sans-serif);
   line-height: 1.5;
   color: #212529;
-  
+  margin: 0;
+  text-align: center;
+  font-size: 2vw;
 
-}
 
-.navbar-card {
-  background-color: #222020;
 }
 
 .array-card {
+  padding-top: var(--bs-gutter-x, .90%);
   padding-right: var(--bs-gutter-x, .90%);
   padding-left: var(--bs-gutter-x, .90%);
   margin-right: auto;
   margin-left: auto;
-  width: 75%;
+  width: 90%;
   height: 75%;
   border: 1px black solid;
   border-radius: 7px;
@@ -27,27 +27,25 @@ body {
 
 }
 
-
-.form-txt-card {
-  display: block;
+.table-card{
   width: 100%;
-  padding: 0.375rem 0.75rem;
-  font-size: 1.5vw;
-  font-weight: 2vw;
-  line-height: 1.5;
+}
+
+.form-input-card {
+  display: block;
+  padding: 00.275rem 0.275rem ;
+  font-size: 1vw;
   color: #212529;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  -webkit-appearance: none;
-  -moz-appearance: none;
   appearance: none;
-  border-radius: 0.25rem;
+  border-radius: 0.1rem;
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-  text-align: center !important;
-
-}
+  text-align: center;
+  border-radius: 0.3vw;}
 
 .th {
   font-size: 2vw;
 }
+
