--- a/style.css
+++ b/style.css
@@ -1,51 +1,14 @@
+* {
+  box-shadow: 0 0 0 1px red
+  inset;
+}
+
 html {
-  background-color: #3C3C3C;
-}
-
-body {
-  font-family: var(--bs-font-sans-serif);
-  line-height: 1.5;
-  color: #212529;
-  margin: 0;
-  text-align: center;
-  font-size: 2vw;
-
-
-}
-
-.array-card {
-  padding-top: var(--bs-gutter-x, .90%);
-  padding-right: var(--bs-gutter-x, .90%);
-  padding-left: var(--bs-gutter-x, .90%);
-  margin-right: auto;
-  margin-left: auto;
-  width: 90%;
-  height: 75%;
-  border: 1px black solid;
-  border-radius: 7px;
-  background-color: rgba(169, 169, 169, 0.685);
-
-}
-
-.table-card{
+  height: 100%;
   width: 100%;
-}
-
-.form-input-card {
-  display: block;
-  padding: 00.275rem 0.275rem ;
-  font-size: 1vw;
-  color: #212529;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  appearance: none;
-  border-radius: 0.1rem;
-  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-  text-align: center;
-  border-radius: 0.3vw;}
-
-.th {
   font-size: 2vw;
 }
-
+  
+@media screen and (min-width:1000px){
+  
+}
