--- a/style.css
+++ b/style.css
@@ -1,24 +1,37 @@
 * {
-  box-shadow: 0 0 0 1px red
-  inset;
-  text-decoration: none; 
+  box-shadow: 0 0 0 1px red inset;
+  
 }
 
 html {
   height: 100%;
   width: 100%;
-  font-size: 2vw;
   background-color: darkgrey;
 }
 
 body {
-  display: block;
-  margin: 2vw;
-  
+  background-color: #8a8888;
+  text-align: center;
+  margin: auto;
+
 }
 
-.table-box {
+
+.main-table {
+  display: table;
+  border-collapse: separate;
+  box-sizing: border-box;
+  text-indent: initial;
+  border-spacing: 0px;
+  border-color: gray;
+}
+
+.table-style {
   width: 100%;
+
+}
+
+.table-input {
 
 }
 
