--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 
 html {
-  height: 100%;
-  width: 100%;
+
+
   background-color: darkgrey;
 
 }
@@ -24,8 +24,6 @@ nav {
   text-decoration: none;
   font-family: "lobster", sans-serif;
   color: #ececec;
-  font-size: 1.1rem;
-
 }
 
 nav ul {
@@ -48,20 +46,14 @@ nav a {
   font-family: "lobster", sans-serif;
 }
 
-body {
-  
-}
 
 .main-div {
   display: flex;
   justify-content: center;
-  
   margin: 0.8rem;
-
 }
 
 #tab_logic {
-
   border-collapse: separate;
   justify-content: center;
   text-align: center;
@@ -69,9 +61,8 @@ body {
   box-sizing: border-box;
   margin: 0.5rem;
   background-color: #535050;
-  border-radius: 0.3rem;
+  border-radius: 0.5rem;
   border: 2px solid #D4D4D5;
-  
 }
 
 
@@ -96,8 +87,50 @@ td {
 
 .button-table {
   color: #D4D4D5;
-  padding: 1rem;
-  margin-top: 0.8rem;
+  margin-right: 1.3rem;
+  margin-left: 1.3rem;
+  padding: 0.6rem;
+  background-color: #535050;
+  border-radius: 0.5rem;
+  border: 2px solid #D4D4D5;
+}
+
+#add_row {
+float: left;
+}
+
+#delete_row{
+  float: right;
+}
+
+footer{
+  font-family: 'Rubik';
+  background-color: #535353;
+  position:absolute;
+  bottom:0;  /* on le colle en bas */
+  width:100%;
+  height:100px;   /* Hauteur du pied de page */
+  display: flex;
+  justify-content: center;
+}
+
+footer ul{
+  display: list-item;
+  width: 100%;
+}
+
+footer ul li{
+padding-right: 10px;
+display: block;
+}
+
+footer ul li a{
+  color: #cfd2d6;
+  text-decoration: none;
+}
+
+footer ul li a {
+  color: #27bcda;
 }
 
 @media screen and (min-width:650px) {
